--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         </div>
         <div class="social-media">
             <a href="http://steamcommunity.com/my/profile" target="_blank" class="social-icon steam">Steam</a>
-            <a href="https://discord.gg/karutafun" target="_blank" class="social-icon discord">Discord</a>
+            <a href="https://discord.com/users/177922564436262912" target="_blank" class="social-icon discord">Discord</a>
             <a href="https://www.youtube.com/" target="_blank" class="social-icon youtube">Youtube</a>
             <a href="https://oguser.com/album" target="_blank" class="social-icon OGUsers">OGUsers</a>
         </div>
