--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
             <h1>socials</h1>
         </div>
         <div class="social-media">
-            <a href="http://steamcommunity.com/my/profile" target="_blank" class="social-icon steam">Steam</a>
+            <a href="http://t.me/luh0xy" target="_blank" class="social-icon telegram">Telegram</a>
             <a href="https://discord.com/users/177922564436262912" target="_blank" class="social-icon discord">Discord</a>
-            <a href="https://www.youtube.com/" target="_blank" class="social-icon youtube">Youtube</a>
-            <a href="https://oguser.com/album" target="_blank" class="social-icon OGUsers">OGUsers</a>
+            <a href="https://www.youtube.com/@highoffoxy" target="_blank" class="social-icon youtube">Youtube</a>
+            <a href="https://oguser.com/align" target="_blank" class="social-icon OGUsers">OGUsers</a>
         </div>
     </div>
 
