--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1>socials</h1>
+            <h1>Oxy</h1>
         </div>
         <div class="social-media">
             <a href="http://t.me/luh0xy" target="_blank" class="social-icon telegram">Telegram</a>
